# UMISI-sem1-OpenTelemetry

./: .commands  .gitignore  .gitmodules  TODO  compose_build  compose_run  docker-compose.yml  todo
clients/cpp/: CMakeLists.txt  Docker_start.sh  Dockerfile  config  docker_build  docker_run  start.sh
clients/csharp/: .dockerignore  Dockerfile  OtelDemo.csproj  docker_build  docker_run
clients/csharp/_src/: Program.cs
clients/python/: Dockerfile  docker_build  docker_run
clients/python/_src/: main.py
clients/rust/: .dockerignore  Cargo.toml  Dockerfile  config  docker_build  docker_run  start.sh
clients/rust/_src/: main.rs
cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  config  docker_build  docker_run  start.sh
cpp/_src/: main.cpp
cpp/build-docker/: CMakeCache.txt  Makefile  cmake_install.cmake
server/: listen_otlp_http.sh
server/otel/: Dockerfile  config.yaml  docker_build  docker_run
server/python/: Dockerfile  docker_build  docker_run  requirements.txt  start.sh
server/python/_src/: main.py
slicer/: frute_ninja.sh
