[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "http-proto", "reqwest-blocking-client"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace"] }



[[bin]]
name = "client_rust"
path = "_src/main.rs"
